[package]
name = "uint"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
keywords = ["integers", "specification"]
repository = "https://github.com/franziskuskiefer/rust-uint-n"
description = "Defining bounded natural integer types"
license = "Apache-2.0"

[package.metadata.docs.rs]
features = ["uint_uint_n", "uint_natmod_p", "common", "uint_traits"]

[dependencies]
uint_uint_n = { path = "uint_n/", optional = true }
uint_natmod_p = { path = "natmod_p/", optional = true }
uint_traits = { path = "traits/", optional = true }
common = { path = "common/", optional = true }

[features]
default = ["uint_uint_n", "uint_natmod_p", "common", "uint_traits"]
