[package]
name = "uint_natmod_p"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
keywords = ["integers", "specification"]
repository = "https://github.com/franziskuskiefer/rust-uint-n"
description = "Defining natural numbers modulo p"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
uint_traits = { path = "../traits" }
common = { path = "../common" }
num = "0.2"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
